# shotgun

./: .gitignore  README.md  pyproject.toml  shotgun.toml
shotgun/: __main__.py  agent.py  bot.py  config.py
