[project]
name = "shotgun"
version = "0.1.0"
description = "Stateless chatbot for Element built on Zerostack"
requires-python = ">=3.10"
dependencies = [
    "matrix-nio>=0.25.0",
]

[project.scripts]
shotgun = "shotgun.__main__:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
